--- a/index.html
+++ b/index.html
@@ -15,29 +15,40 @@
         <div class="inner-form">
           <div class="row">
             <div class="input-field first" id="first">
-              <input list="programs" type="text" id="inputFocus" placeholder="Search">
-              <datalist id="programs" style="height:5.1em;overflow:hidden">
-                <option value="Accounting">
-                <option value="Actuarial Science">
-                <option value="Advertising Creative">
-                <option value="Advertising Management">
-                <option value="African American and African Studies">
-                <option value="Agribusiness Management">
-                <option value="Agriculture, Food and Natural Resources Education">
-                <option value="Animal Science">
-                <option value="Anthropology - Bachelor of Arts">
-                <option value="Anthropology - Bachelor of Science">
-                <option value="Apparel and Textile Design">
-                <option value="Apparel and Textiles">
-                <option value="Applied Engineering Sciences">
-                <option value="Arabic">
-                <option value="Art Education">
-                <option value="Art History and Visual Culture">
-                <option value="Arts and Humanities">
-                <option value="Astrophysics">
-                <option value="Athletic Training">
-                <option value="Biochemistry and Molecular Biology">
-              </datalist>
+              <template id="resultstemplate">
+                <option>Accounting</option>
+                <option>Actuarial Science</option>
+                <option>Advertising Creative</option>
+                <option>Advertising Management</option>
+                <option>African American and African Studies</option>
+                <option>Agribusiness Management</option>
+                <option>Agriculture, Food and Natural Resources Education</option>
+                <option>Animal Science</option>
+                <option>Anthropology - Bachelor of Arts</option>
+                <option>Anthropology - Bachelor of Science</option>
+                <option>Apparel and Textile Design</option>
+                <option>Apparel and Textiles</option>
+                <option>Applied Engineering Sciences</option>
+                <option>Arabic</option>
+                <option>Art Education</option>
+                <option>Art History and Visual Culture</option>
+                <option>Arts and Humanities</option>
+                <option>Astrophysics</option>
+                <option>Athletic Training</option>
+                <option>Biochemistry and Molecular Biology</option>
+                <option>Biochemistry and Molecular Biology/Biotechnology</option>
+                <option>Biological Science-Secondary Education</option>
+                <option>Biology</option>
+                <option>Biomedical Laboratory Science</option>
+                <option>Biosystems Engineering</option>
+                <option>Chemical Engineering</option>
+                <option>Chemical Physics</option>
+                <option>Chemistry - Bachelor of Arts</option>
+                <option>Chemistry - Bachelor of Science</option>
+                <option>Child Development</option>
+            </template>
+            <input type="text" name="search" id="inputFocus" placeholder="Search" list="searchresults" autocomplete="off" />
+            <datalist id="searchresults"></datalist>
               <button class="clear" id="clear">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                   <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
@@ -51,13 +62,6 @@
     <script>
       var btnDelete = document.getElementById('clear');
       var inputFocus = document.getElementById('inputFocus');
-      //- btnDelete.on('click', function(e) {
-      //-   e.preventDefault();
-      //-   inputFocus.classList.add('isFocus')
-      //- })
-      //- inputFocus.addEventListener('click', function() {
-      //-   this.classList.add('isFocus')
-      //- })
       btnDelete.addEventListener('click', function(e)
       {
         e.preventDefault();
@@ -74,6 +78,20 @@
           inputFocus.classList.remove('isFocus')
         }
       });
+
+    var search = document.querySelector('#inputFocus');
+    var results = document.querySelector('#searchresults');
+    var templateContent = document.querySelector('#resultstemplate').content;
+    search.addEventListener('keyup', function handler(event) {
+    while (results.children.length) results.removeChild(results.firstChild);
+    var inputVal = new RegExp(search.value.trim(), 'i');
+    var clonedOptions = templateContent.cloneNode(true);
+    var set = Array.prototype.reduce.call(clonedOptions.children, function searchFilter(frag, el) {
+        if (inputVal.test(el.textContent) && frag.children.length < 5) frag.appendChild(el);
+        return frag;
+    }, document.createDocumentFragment());
+    results.appendChild(set);
+});
 
     </script>
   </body>
