--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="Andrew Secco" content="MSU Programs">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
   </head>
   <body>
     <div class="s128">
@@ -15,8 +18,9 @@
         <div class="inner-form">
           <div class="row">
             <div class="input-field first" id="first">
-              <template id="resultstemplate">
-                <option>Accounting</option>
+              <select class="js-example-basic-single" id="resultstemplate" name="search" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+                <option value="">Select a Major</option>
+                <option value="../msuprograms/pages/Accounting.html">Accounting</option>
                 <option>Actuarial Science</option>
                 <option>Advertising Creative</option>
                 <option>Advertising Management</option>
@@ -46,53 +50,16 @@
                 <option>Chemistry - Bachelor of Arts</option>
                 <option>Chemistry - Bachelor of Science</option>
                 <option>Child Development</option>
-            </template>
-            <input type="text" name="search" id="inputFocus" placeholder="Search" list="searchresults" autocomplete="off" />
-            <datalist id="searchresults"></datalist>
-              <button class="clear" id="clear">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-                </svg>
-              </button>
+              </select>
             </div>
           </div>
           </div>
         </div>
       </form>
     <script>
-      var btnDelete = document.getElementById('clear');
-      var inputFocus = document.getElementById('inputFocus');
-      btnDelete.addEventListener('click', function(e)
-      {
-        e.preventDefault();
-        inputFocus.value = ''
-      })
-      document.addEventListener('click', function(e)
-      {
-        if (document.getElementById('first').contains(e.target))
-        {
-          inputFocus.classList.add('isFocus')
-        }
-        else
-        {
-          inputFocus.classList.remove('isFocus')
-        }
-      });
-
-    var search = document.querySelector('#inputFocus');
-    var results = document.querySelector('#searchresults');
-    var templateContent = document.querySelector('#resultstemplate').content;
-    search.addEventListener('keyup', function handler(event) {
-    while (results.children.length) results.removeChild(results.firstChild);
-    var inputVal = new RegExp(search.value.trim(), 'i');
-    var clonedOptions = templateContent.cloneNode(true);
-    var set = Array.prototype.reduce.call(clonedOptions.children, function searchFilter(frag, el) {
-        if (inputVal.test(el.textContent) && frag.children.length < 5) frag.appendChild(el);
-        return frag;
-    }, document.createDocumentFragment());
-    results.appendChild(set);
+      $(document).ready(function() {
+    $('.js-example-basic-single').select2();
 });
-
     </script>
   </body>
 </html>
