--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="favicon.ico" />
 <link href="../css/image-resources.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <a href="../index.html"><button class="homebtn"><i class="fa fa-home"></i> Home</button></a>
