Added MSU banner and js scripts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="Andrew Secco" content="MSU Programs">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link href="css/gradient.css" rel="stylesheet" />
     <link href="css/select2.css" rel="stylesheet" />
     <link rel="icon" href="favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -16,6 +17,7 @@
     <script src="/js/main.js"></script>
   </head>
   <body>
+    <img src="../msuprograms/images/MSUMajors-banner.png" class="banner" alt="MSU Programs" width="512" height="384">
     <div class="s128">
       <form>
         <div class="inner-form">
