--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -8,6 +8,8 @@
 <link rel="icon" href="../favicon.ico" />
 <link href="../css/image-resources.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="/js/main.js"></script>
 <a href="../index.html"><button class="homebtn"><i class="fa fa-home"></i> Home</button></a>
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
@@ -43,8 +45,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <!--Zippia Embeds-->
 
             <div style="max-width:768px"> <div style="position:relative; padding-top:580px"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/college-major-paths/accounting-major/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></div>
-            <div style="max-width:768px"> <div style="position:relative; padding-top:79.5%"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/best-states-map/accountant/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></p></div>
-
+            <div style="max-width:768px"> <div style="position:relative; padding-top:79.5%"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/best-states-map/accountant/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></p></div> 
+            
         </div>
       </div>
     </div>
