Fixed banner borders and added source for degree requirements

--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -13,6 +13,10 @@
 <a href="../index.html"><button class="homebtn"><i class="fa fa-home"></i> Home</button></a>
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
+
+#source {
+  text-align: right;
+}
 </style>
 <body class="w3-green">
 
@@ -136,6 +140,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 </ol>
             
         </div> <!--Program Information Ends-->
+        <br>
+        <p class="w3-text-grey" style="font-size:12px" id="source"><a href="https://reg.msu.edu/academicprograms/Programs.aspx" target="_blank">Source: Michigan State University</p></a>
       </div>
     </div>
   </div>
