--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Accounting</title> <!--Program Title-->
+<title>Accounting</title> <!--Major Title-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="../images/accounting.jpg" style="width:100%"> <!--Program Image-->
+          <img src="../images/accounting.jpg" style="width:100%"> <!--Major Image-->
         </div>
         <div class="circle" style="margin:10px 50px;" id="resources">
             <h2 style="text-align: center;"><b>Resources:</b></h2>
@@ -58,7 +58,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     <div class="w3-twothird" id="programs">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16" style="text-align: center;"></i><b>Undergraduate Degree - Accounting</b></h2> <!-- Undergraduate Program-->
-        <div class="w3-container" word-wrap: break-word;> <!--Program Information Starts-->
+        <div class="w3-container" word-wrap: break-word;> <!--Major Information Starts-->
             <p style='box-sizing: border-box; margin: 0px 0px 10px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; color: rgb(51, 51, 51); font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;'>The Department of Accounting and Information Systems provides a Bachelor of Arts degree with a major in accounting. &nbsp;The program provides an excellent foundation in accounting. &nbsp;Students, who complete the program along with the offered government and not-for-profit accounting course, meet the State of Michigan educational requirements to sit for the Certified Public Accountant (CPA) exam in Michigan.&nbsp;</p>
 <p style='box-sizing: border-box; margin: 0px 0px 10px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; color: rgb(51, 51, 51); font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;'><strong style="box-sizing: border-box; font-weight: bold; font-family: Gotham-Medium;">Requirements for the Bachelor of Arts Degree in Accounting</strong></p>
 <ol style='box-sizing: border-box; margin-top: 0px; margin-bottom: 10px; color: rgb(51, 51, 51); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;'>
@@ -139,7 +139,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     </li>
 </ol>
             
-        </div> <!--Program Information Ends-->
+        </div> <!--Major Information Ends-->
         <br>
         <p class="w3-text-grey" style="font-size:12px" id="source"><a href="https://reg.msu.edu/academicprograms/Programs.aspx" target="_blank">Source: Michigan State University</p></a>
       </div>
@@ -149,8 +149,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
 <footer class="w3-container w3-white w3-center w3-margin-top">
   <p>Contact Me </p>
-  <a href="mailto:asecco99@gmail.com"> <img src="https://cdn.icon-icons.com/icons2/1182/PNG/512/1490129331-rounded07_82197.png" title="Email" width="24" height="24"></a>
-  <a href="http://github.com/asecco"> <img src="https://image.flaticon.com/icons/png/512/25/25231.png" title="GitHub" width="24" height="24"></a>
+  <a href="mailto:asecco99@gmail.com" target="_blank"><img src="https://cdn.icon-icons.com/icons2/1182/PNG/512/1490129331-rounded07_82197.png" title="Email" width="24" height="24"></a>
+  <a href="http://github.com/asecco" target="_blank"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" title="GitHub" width="24" height="24"></a>
   <p>© 2021 - Andrew Secco</p>
 </footer>
 </body>
