--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -28,11 +28,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="../images/accounting.jpg" style="width:100%"> <!--Major Image-->
+          <img src="https://www2.naz.edu/files/9413/9402/8629/accounting_sm.jpg" style="width:100%"> <!--Major Image-->
         </div>
         <div class="circle" style="margin:10px 50px;" id="resources">
             <h2 style="text-align: center;"><b>Resources:</b></h2>
-            <a href="https://careernetwork.msu.edu/outcomes/#!Accounting%20(BUS)" target="_blank"><img src="https://www.law.msu.edu/assets/img/career-nationwide.jpg" title="MSU Career Outcomes" width="128" height="96"></a> <!--MSU Career Outcomes-->
+            <a href="https://careernetwork.msu.edu/outcomes/#!Accounting%20(BUS)" target="_blank"><img src="https://www.law.msu.edu/assets/img/career-nationwide.jpg" title="MSU Career Services Outcomes" width="128" height="96"></a> <!--MSU Career Services Outcomes-->
             <a href="https://reg.msu.edu/courses/search.aspx" target="_blank"><img src="http://brand.msu.edu/_files/images/spartan-helmet-og.png" title="MSU Course Descriptions" width="96" height="96"></a> <!--MSU Course Descriptions-->
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
@@ -49,7 +49,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <!--Zippia Embeds-->
 
             <div style="max-width:768px"> <div style="position:relative; padding-top:580px"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/college-major-paths/accounting-major/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></div>
-            <div style="max-width:768px"> <div style="position:relative; padding-top:79.5%"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/best-states-map/accountant/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></p></div> 
+            <div style="max-width:768px"> <div style="position:relative; padding-top:79.5%"> <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.zippia.com/widgets/best-states-map/accountant/" frameborder="no" scrolling="no"></iframe> </div> <p style="text-align:right; margin:0; font-family:'Open Sans',sans-serif">Source: <a style="color:#3174EE; font-weight:600" href="https://www.zippia.com" target="_blank">Zippia.com</a></div> 
             
         </div>
       </div>
