Removed majors with both ba and bs, also updated more majors

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 <option value="../msuprograms/pages/Agribusiness-Management.html">Agribusiness Management</option>
                 <option value="../msuprograms/pages/Agriculture-Food-and-Natural-Resources-Education.html">Agriculture, Food and Natural Resources Education</option>
                 <option value="../msuprograms/pages/Animal-Science.html">Animal Science</option>
-                <option value="../msuprograms/pages/Anthropology-Bachelor-of-Arts.html">Anthropology-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Anthropology-Bachelor-of-Science.html">Anthropology-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Anthropology.html">Anthropology</option>
                 <option value="../msuprograms/pages/Apparel-and-Textile-Design.html">Apparel and Textile Design</option>
                 <option value="../msuprograms/pages/Apparel-and-Textiles.html">Apparel and Textiles</option>
                 <option value="../msuprograms/pages/Applied-Engineering-Sciences.html">Applied Engineering Sciences</option>
@@ -51,9 +50,8 @@
                 <option value="../msuprograms/pages/Biosystems-Engineering.html">Biosystems Engineering</option>
                 <option value="../msuprograms/pages/Chemical-Engineering.html">Chemical Engineering</option>
                 <option value="../msuprograms/pages/Chemical-Physics.html">Chemical Physics</option>
-                <option value="../msuprograms/pages/Chemistry-Bachelor-of-Arts.html">Chemistry-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Chemistry-Bachelor-of-Science.html">Chemistry-Bachelor of Science</option>
-                <option value="../msuprograms/pages/Child-Development-Bachelor-of-Arts.html">Child Development-Bachelor of Arts</option>
+                <option value="../msuprograms/pages/Chemistry.html">Chemistry</option>
+                <option value="../msuprograms/pages/Child-Development.html">Child Development</option>
                 <option value="../msuprograms/pages/Chinese.html">Chinese</option>
                 <option value="../msuprograms/pages/Civil-Engineering.html">Civil Engineering</option>
                 <option value="../msuprograms/pages/Communication.html">Communication</option>
@@ -62,8 +60,7 @@
                 <option value="../msuprograms/pages/Comparative-Cultures-and-Politics-Major.html">Comparative Cultures and Politics Major</option>
                 <option value="../msuprograms/pages/Composition.html">Composition</option>
                 <option value="../msuprograms/pages/Computational-Data-Science.html">Computational Data Science</option>
-                <option value="../msuprograms/pages/Computational-Mathematics-Bachelor-of-Arts.html">Computational Mathematics-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Computational-Mathematics-Bachelor-of-Science.html">Computational Mathematics-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Computational-Mathematics.html">Computational Mathematics</option>
                 <option value="../msuprograms/pages/Computer-Engineering.html">Computer Engineering</option>
                 <option value="../msuprograms/pages/Computer-Science.html">Computer Science</option>
                 <option value="../msuprograms/pages/Construction-Management.html">Construction Management</option>
@@ -75,8 +72,7 @@
                 <option value="../msuprograms/pages/Early-Care-and-Education.html">Early Care and Education</option>
                 <option value="../msuprograms/pages/Earth-Science.html">Earth Science</option>
                 <option value="../msuprograms/pages/Economic-Geography.html">Economic Geography</option>
-                <option value="../msuprograms/pages/Economics-Bachelor-of-Arts.html">Economics-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Economics-Bachelor-of-Science.html">Economics-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Economics.html">Economics</option>
                 <option value="../msuprograms/pages/Education.html">Education</option>
                 <option value="../msuprograms/pages/Electrical-Engineering.html">Electrical Engineering</option>
                 <option value="../msuprograms/pages/English.html">English</option>
@@ -120,7 +116,7 @@
                 <option value="../msuprograms/pages/Human-Resource-Management.html">Human Resource Management</option>
                 <option value="../msuprograms/pages/Humanities-Prelaw-Program.html">Humanities Prelaw Program</option>
                 <option value="../msuprograms/pages/Information-Science.html">Information Science</option>
-                <option value="../msuprograms/pages/Integrative-Biology-Bachelor-of-Science.html">Integrative Biology-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Integrative-Biology.html">Integrative Biology</option>
                 <option value="../msuprograms/pages/Interior-Design.html">Interior Design</option>
                 <option value="../msuprograms/pages/International-Relations.html">International Relations</option>
                 <option value="../msuprograms/pages/Japanese.html">Japanese</option>
@@ -132,10 +128,8 @@
                 <option value="../msuprograms/pages/Management.html">Management</option>
                 <option value="../msuprograms/pages/Marketing.html">Marketing</option>
                 <option value="../msuprograms/pages/Materials-Science-and-Engineering.html">Materials Science and Engineering</option>
-                <option value="../msuprograms/pages/Mathematics-Bachelor-of-Arts.html">Mathematics-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Mathematics-Bachelor-of-Science.html">Mathematics-Bachelor of Science</option>
-                <option value="../msuprograms/pages/Mathematics-Advanced-Bachelor-of-Arts.html">Mathematics, Advanced-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Mathematics-Advanced-Bachelor-of-Science.html">Mathematics, Advanced-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Mathematics.html">Mathematics</option>
+                <option value="../msuprograms/pages/Mathematics-Advanced.html">Mathematics, Advanced</option>
                 <option value="../msuprograms/pages/Mechanical-Engineering.html">Mechanical Engineering</option>
                 <option value="../msuprograms/pages/Media-and-Information.html">Media and Information</option>
                 <option value="../msuprograms/pages/Medical-Laboratory-Science.html">Medical Laboratory Science</option>
@@ -150,16 +144,14 @@
                 <option value="../msuprograms/pages/Philosophy.html">Philosophy</option>
                 <option value="../msuprograms/pages/Physical-Science-Secondary-Education.html">Physical Science Secondary Education</option>
                 <option value="../msuprograms/pages/Physical-Science.html">Physical Science</option>
-                <option value="../msuprograms/pages/Physics-Bachelor-of-Arts.html">Physics-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Physics-Bachelor-of-Science.html">Physics-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Physics.html">Physics</option>
                 <option value="../msuprograms/pages/Physiology.html">Physiology</option>
                 <option value="../msuprograms/pages/Plant-Biology.html">Plant Biology</option>
                 <option value="../msuprograms/pages/Political-Science-General.html">Political Science General</option>
                 <option value="../msuprograms/pages/Political-Science-Prelaw.html">Political Science Prelaw</option>
                 <option value="../msuprograms/pages/Political-Theory-and-Constitutional-Democracy.html">Political Theory and Constitutional Democracy</option>
                 <option value="../msuprograms/pages/Professional-and-Public-Writing.html">Professional and Public Writing</option>
-                <option value="../msuprograms/pages/Psychology-Bachelor-of-Arts.html">Psychology-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Psychology-Bachelor-of-Science.html">Psychology-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Psychology.html">Psychology</option>
                 <option value="../msuprograms/pages/Public-Policy.html">Public Policy</option>
                 <option value="../msuprograms/pages/Public-Relations.html">Public Relations</option>
                 <option value="../msuprograms/pages/Quantitative-Risk-Analytics.html">Quantitative Risk Analytics</option>
@@ -167,24 +159,19 @@
                 <option value="../msuprograms/pages/Russian.html">Russian</option>
                 <option value="../msuprograms/pages/Social-Relations-and-Policy.html">Social Relations and Policy</option>
                 <option value="../msuprograms/pages/Social-Work.html">Social Work</option>
-                <option value="../msuprograms/pages/Sociology-Bachelor-of-Arts.html">Sociology-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Sociology-Bachelor-of-Science.html">Sociology-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Sociology.html">Sociology</option>
                 <option value="../msuprograms/pages/Spanish.html">Spanish</option>
                 <option value="../msuprograms/pages/Special-Education.html">Special Education</option>
-                <option value="../msuprograms/pages/Statistics-Bachelor-of-Arts.html">Statistics-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Statistics-Bachelor-of-Science.html">Statistics-Bachelor of Science</option>
-                <option value="../msuprograms/pages/Studio-Art-Bachelor-of-Arts.html">Studio Art-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Studio-Art-Bachelor-of-Fine-Arts.html">Studio Art-Bachelor of Fine Arts</option>
+                <option value="../msuprograms/pages/Statistics.html">Statistics</option>
+                <option value="../msuprograms/pages/Studio-Art.html">Studio Art</option>
                 <option value="../msuprograms/pages/Supply-Chain-Management.html">Supply Chain Management</option>
                 <option value="../msuprograms/pages/Sustainable-Parks-Recreation-and-Tourism.html">Sustainable Parks, Recreation and Tourism</option>
-                <option value="../msuprograms/pages/Theatre-Bachelor-of-Arts.html">Theatre-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Theatre-Bachelor-of-Fine-Arts.html">Theatre-Bachelor of Fine Arts</option>
+                <option value="../msuprograms/pages/Theatre.html">Theatre</option>
                 <option value="../msuprograms/pages/Urban-and-Regional-Planning.html">Urban and Regional Planning</option>
                 <option value="../msuprograms/pages/Veterinary-Nursing.html">Veterinary Nursing</option>
                 <option value="../msuprograms/pages/Women's-and-Gender-Studies.html">Women's and Gender Studies</option>
                 <option value="../msuprograms/pages/World-Politics.html">World Politics</option>
-                <option value="../msuprograms/pages/Zoology-Bachelor-of-Arts.html">Zoology-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Zoology-Bachelor-of-Science.html">Zoology-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Zoology.html">Zoology</option>
               </select>
             </div>
           </div>
