Completed more pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <option value="../msuprograms/pages/Astrophysics.html">Astrophysics</option>
                 <option value="../msuprograms/pages/Athletic-Training.html">Athletic Training</option>
                 <option value="../msuprograms/pages/Biochemistry-and-Molecular-Biology.html">Biochemistry and Molecular Biology</option>
-                <option value="../msuprograms/pages/Biological-Science-Secondary-Education.html">Biological Science Secondary Education</option>
                 <option value="../msuprograms/pages/Biology.html">Biology</option>
                 <option value="../msuprograms/pages/Biomedical-Laboratory-Science.html">Biomedical Laboratory Science</option>
                 <option value="../msuprograms/pages/Biosystems-Engineering.html">Biosystems Engineering</option>
@@ -57,7 +56,7 @@
                 <option value="../msuprograms/pages/Communication.html">Communication</option>
                 <option value="../msuprograms/pages/Communication-Leadership-and-Strategy.html">Communication Leadership and Strategy</option>
                 <option value="../msuprograms/pages/Communicative-Sciences-and-Disorders.html">Communicative Sciences and Disorders</option>
-                <option value="../msuprograms/pages/Comparative-Cultures-and-Politics-Major.html">Comparative Cultures and Politics Major</option>
+                <option value="../msuprograms/pages/Comparative-Cultures-and-Politics-Major.html">Comparative Cultures and Politics</option>
                 <option value="../msuprograms/pages/Composition.html">Composition</option>
                 <option value="../msuprograms/pages/Computational-Data-Science.html">Computational Data Science</option>
                 <option value="../msuprograms/pages/Computational-Mathematics.html">Computational Mathematics</option>
