Minor typo and word changes, and added css background image with gradient

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="/js/main.js"></script>
   </head>
   <body>
-    <img src="../msuprograms/images/MSUMajors-banner.png" class="banner" alt="MSU Programs" width="512" height="384">
+    <img src="../msuprograms/images/MSUMajors-banner.png" class="banner" alt="MSU Majors" width="512" height="384">
     <div class="s128">
       <form>
         <div class="inner-form">
@@ -101,8 +101,7 @@
                 <option value="../msuprograms/pages/Hospitality-Business.html">Hospitality Business</option>
                 <option value="../msuprograms/pages/Human-Biology.html">Human Biology</option>
                 <option value="../msuprograms/pages/Human-Capital-and-Society.html">Human Capital and Society</option>
-                <option value="../msuprograms/pages/Human-Development-and-Family-Studies-Bachelor-of-Arts.html">Human Development and Family Studies-Bachelor of Arts</option>
-                <option value="../msuprograms/pages/Human-Development-and-Family-Studies-Bachelor-of-Science.html">Human Development and Family Studies-Bachelor of Science</option>
+                <option value="../msuprograms/pages/Human-Development-and-Family-Studies.html">Human Development and Family Studies</option>
                 <option value="../msuprograms/pages/Human-Geography.html">Human Geography</option>
                 <option value="../msuprograms/pages/Human-Resource-Management.html">Human Resource Management</option>
                 <option value="../msuprograms/pages/Humanities-Prelaw-Program.html">Humanities Prelaw Program</option>
