--- a/pages/Actuarial-Science.html
+++ b/pages/Actuarial-Science.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Actuaries</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Financial consultants</b></p>
             <p class="w3-text-grey"><b>• Statisticians</b></p>
-            <p class="w3-text-grey"><b>• Insurance Underwriters</b></p>
+            <p class="w3-text-grey"><b>• Insurance underwriters</b></p>
             <p class="w3-text-grey"><b>• Insurance analysts</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
