--- a/pages/African-American-and-African-Studies.html
+++ b/pages/African-American-and-African-Studies.html
@@ -37,11 +37,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Area, Ethnic, and Cultural Studies Teachers</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• University Professor</b></p>
-            <p class="w3-text-grey"><b>• Community Education Officer</b></p>
-            <p class="w3-text-grey"><b>• Business Manager</b></p>
-            <p class="w3-text-grey"><b>• Cultural Advisor</b></p>
+            <p class="w3-text-grey"><b>• Area, ethnic, and cultural studies teachers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• University professor</b></p>
+            <p class="w3-text-grey"><b>• Community education officer</b></p>
+            <p class="w3-text-grey"><b>• Business manager</b></p>
+            <p class="w3-text-grey"><b>• Cultural advisor</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $40,000 - $50,000</b></p> <!--Salary Information-->
