--- a/pages/Animal-Science.html
+++ b/pages/Animal-Science.html
@@ -39,8 +39,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Animal producers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Animal managers</b></p>
-            <p class="w3-text-grey"><b>• Animal Scientists</b></p>
-            <p class="w3-text-grey"><b>• Farmers, Ranchers, and Other Agricultural Managers</b></p>
+            <p class="w3-text-grey"><b>• Animal scientists</b></p>
+            <p class="w3-text-grey"><b>• Farmers, ranchers, and other agricultural managers</b></p>
             <p class="w3-text-grey"><b>• Educators</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
