--- a/pages/Apparel-and-Textile-Design.html
+++ b/pages/Apparel-and-Textile-Design.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Designer</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Accessories assistants</b></p>
             <p class="w3-text-grey"><b>• Public relations assistants</b></p>
-            <p class="w3-text-grey"><b>• Home Management Advisors</b></p>
+            <p class="w3-text-grey"><b>• Home management advisors</b></p>
             <p class="w3-text-grey"><b>• Events coordinators</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
