--- a/pages/Arts-and-Humanities.html
+++ b/pages/Arts-and-Humanities.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Social workers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Advocates</b></p>
             <p class="w3-text-grey"><b>• Community leaders</b></p>
-            <p class="w3-text-grey"><b>• Postsecondary Teachers</b></p>
+            <p class="w3-text-grey"><b>• Postsecondary teachers</b></p>
             <p class="w3-text-grey"><b>• Youth organizers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
