--- a/pages/Chemical-Physics.html
+++ b/pages/Chemical-Physics.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Biochemists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Chemical engineers</b></p>
             <p class="w3-text-grey"><b>• Physicists</b></p>
-            <p class="w3-text-grey"><b>• Natural Sciences Managers</b></p>
+            <p class="w3-text-grey"><b>• Natural sciences managers</b></p>
             <p class="w3-text-grey"><b>• Nanosystems engineers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
