--- a/pages/Chemistry.html
+++ b/pages/Chemistry.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Chemists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Chemistry Teachers</b></p>
+            <p class="w3-text-grey"><b>• Chemistry teachers</b></p>
             <p class="w3-text-grey"><b>• Forensic scientists</b></p>
             <p class="w3-text-grey"><b>• Biochemical engineers</b></p>
             <p class="w3-text-grey"><b>• Food scientists</b></p>
