--- a/pages/Child-Development.html
+++ b/pages/Child-Development.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Applied behavior analysts</b></p>
             <p class="w3-text-grey"><b>• Preschool teachers</b></p>
             <p class="w3-text-grey"><b>• Youth care workers</b></p>
-            <p class="w3-text-grey"><b>• Home Management Advisors</b></p>
+            <p class="w3-text-grey"><b>• Home management advisors</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $30,000 - $40,000</b></p> <!--Salary Information-->
