--- a/pages/Chinese.html
+++ b/pages/Chinese.html
@@ -37,10 +37,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Foreign Language and Literature Teachers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Foreign language and literature teachers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• English teaching assistants</b></p>
             <p class="w3-text-grey"><b>• Analysts</b></p>
-            <p class="w3-text-grey"><b>• Interpreters and Translators</b></p>
+            <p class="w3-text-grey"><b>• Interpreters and translators</b></p>
             <p class="w3-text-grey"><b>• Legislative correspondence staffers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
