--- a/pages/Communication.html
+++ b/pages/Communication.html
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Public Relations Specialists</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Public relations specialists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Creative directors</b></p>
             <p class="w3-text-grey"><b>• Communications specialists</b></p>
             <p class="w3-text-grey"><b>• Entrepreneurs</b></p>
