--- a/pages/Data-Science.html
+++ b/pages/Data-Science.html
@@ -37,8 +37,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Data Scientist</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Applications Architect</b></p>
+            <p class="w3-text-grey"><b>• Data scientist</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Applications architect</b></p>
             <p class="w3-text-grey"><b>• Data Engineer</b></p>
             <p class="w3-text-grey"><b>• Statistician</b></p>
             <p class="w3-text-grey"><b>• Analysts</b></p>
