--- a/pages/Dietetics.html
+++ b/pages/Dietetics.html
@@ -37,8 +37,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Dietitians and Nutritionists</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Dietetic Technicians</b></p>
+            <p class="w3-text-grey"><b>• Dietitians and nutritionists</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Dietetic technicians</b></p>
             <p class="w3-text-grey"><b>• Health advisers</b></p>
             <p class="w3-text-grey"><b>• Food service managers</b></p>
             <p class="w3-text-grey"><b>• Food service consultants</b></p>
