--- a/pages/Accounting.html
+++ b/pages/Accounting.html
@@ -39,12 +39,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Accountants</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Auditors</b></p>
-            <p class="w3-text-grey"><b>• Budget Analysts</b></p>
-            <p class="w3-text-grey"><b>• Financial Examiners</b></p>
+            <p class="w3-text-grey"><b>• Budget analysts</b></p>
+            <p class="w3-text-grey"><b>• Financial examiners</b></p>
             <p class="w3-text-grey"><b>• Assurance associates</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
-            <p class="w3-text-grey"><b>• $45,000 - $55,000</b></p> <!--Salary Information-->
+            <p class="w3-text-grey"><b>• $50,000 - $60,000</b></p> <!--Salary Information-->
             <br>
             <!--Zippia Embeds-->
 
