--- a/pages/Agribusiness-Management.html
+++ b/pages/Agribusiness-Management.html
@@ -38,10 +38,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Appraiser</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Sales Manager</b></p>
+            <p class="w3-text-grey"><b>• Sales manager</b></p>
             <p class="w3-text-grey"><b>• Research technician</b></p>
-            <p class="w3-text-grey"><b>• Sales Representative</b></p>
-            <p class="w3-text-grey"><b>• Farmers, Ranchers, and Other Agricultural Managers</b></p>
+            <p class="w3-text-grey"><b>• Sales representative</b></p>
+            <p class="w3-text-grey"><b>• Farmers, ranchers, and other agricultural managers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $50,000 - $60,000</b></p> <!--Salary Information-->
