--- a/pages/Apparel-and-Textiles.html
+++ b/pages/Apparel-and-Textiles.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
             <p class="w3-text-grey"><b>• Designer</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Accessories assistants</b></p>
-            <p class="w3-text-grey"><b>• Home Management Advisors</b></p>
+            <p class="w3-text-grey"><b>• Home management advisors</b></p>
             <p class="w3-text-grey"><b>• Studio coordinators</b></p>
             <p class="w3-text-grey"><b>• Buying assistants</b></p>
 
