--- a/pages/Biosystems-Engineering.html
+++ b/pages/Biosystems-Engineering.html
@@ -37,9 +37,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Architectural and Engineering Managers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Architectural and engineering managers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Biosecurity technicians</b></p>
-            <p class="w3-text-grey"><b>• Biomedical Engineers</b></p>
+            <p class="w3-text-grey"><b>• Biomedical engineers</b></p>
             <p class="w3-text-grey"><b>• Ecosystem engineers</b></p>
             <p class="w3-text-grey"><b>• Consultants</b></p>
 
