--- a/pages/Civil-Engineering.html
+++ b/pages/Civil-Engineering.html
@@ -37,11 +37,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• Civil Engineers</b></p> <!--Career List-->
-            <p class="w3-text-grey"><b>• Architectural and Engineering Managers</b></p>
+            <p class="w3-text-grey"><b>• Civil engineers</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• Architectural and engineering managers</b></p>
             <p class="w3-text-grey"><b>• Construction engineers</b></p>
             <p class="w3-text-grey"><b>• Structural engineers</b></p>
-            <p class="w3-text-grey"><b>• Engineering Teachers</b></p>
+            <p class="w3-text-grey"><b>• Engineering teachers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $60,000 - $70,000</b></p> <!--Salary Information-->
