--- a/pages/Computer-Science.html
+++ b/pages/Computer-Science.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Software engineers</b></p>
             <p class="w3-text-grey"><b>• Systems analysts</b></p>
             <p class="w3-text-grey"><b>• Information security analysts</b></p>
-            <p class="w3-text-grey"><b>• Web Developers</b></p>
+            <p class="w3-text-grey"><b>• Web developers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
             <p class="w3-text-grey"><b>• $70,000 - $80,000</b></p> <!--Salary Information-->
