--- a/pages/English.html
+++ b/pages/English.html
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <a href="https://msugrades.com" target="_blank"><img src="https://msugrades.com/favicon-32x32.png" title="MSU Grades" width="96" height="96"></a> <!--MSU Grades-->
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Possible Careers:</b></p>
-            <p class="w3-text-grey"><b>• English Language and Literature Teachers, Postsecondary</b></p> <!--Career List-->
+            <p class="w3-text-grey"><b>• English language and literature teachers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Copywriters</b></p>
             <p class="w3-text-grey"><b>• Editorial assistants</b></p>
             <p class="w3-text-grey"><b>• Client relations associates</b></p>
