--- a/pages/Entomology.html
+++ b/pages/Entomology.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Teachers</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Biological scientists</b></p>
             <p class="w3-text-grey"><b>• Zoologists</b></p>
-            <p class="w3-text-grey"><b>• Wildlife Biologists</b></p>
+            <p class="w3-text-grey"><b>• Wildlife biologists</b></p>
             <p class="w3-text-grey"><b>• Insect researchers</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
