Changed 9 pages to have a better image

--- a/pages/Comparative-Cultures-and-Politics-Major.html
+++ b/pages/Comparative-Cultures-and-Politics-Major.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://admissions.msu.edu/-/media/assets/admissions/images/academics/majors/comparative-politics-major.jpeg" style="width:100%"> <!--Major Image-->
+          <img src="https://cdn.pixabay.com/photo/2021/01/30/14/22/women-5963960_960_720.jpg" style="width:100%"> <!--Major Image-->
         </div>
         <div class="circle" style="margin:10px 50px;" id="resources">
             <h2 style="text-align: center;"><b>Resources:</b></h2>
