--- a/pages/Environmental-Geosciences.html
+++ b/pages/Environmental-Geosciences.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://admissions.msu.edu/-/media/assets/admissions/images/academics/majors/environmental-geoscience.jpg" style="width:100%"> <!--Major Image-->
+          <img src="https://cdn.pixabay.com/photo/2015/09/09/16/05/forest-931706_960_720.jpg" style="width:100%"> <!--Major Image-->
         </div>
         <div class="circle" style="margin:10px 50px;" id="resources">
             <h2 style="text-align: center;"><b>Resources:</b></h2>
