Fixed image directory

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="/js/main.js"></script>
   </head>
   <body>
-    <img src="../MSU-Majors/images/MSUMajors-banner.png" class="banner" alt="MSU Majors" width="512" height="384">
+    <img src="/images/MSUMajors-banner.png" class="banner" alt="MSU Majors" width="512" height="384">
     <div class="s128">
       <form>
         <div class="inner-form">
