--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <img src="/images/MSUMajors-banner.png" class="banner" alt="MSU Majors" width="512" height="384">
     <div class="loader-wrapper">
-    <div class="loader">Loading...</div>
+      <span class="loader"><span class="loader-inner"></span></span>
   </div>
     <div class="s128">
       <form>
